force-app/main/default/objects/Conference__c/fields/Conference_Cost__c.field-meta.xml
<CustomField>
    <fullName>Conference_Cost__c</fullName>
    <label>Conference Cost</label>
    <summarizedField>Conference_Participant__c.Conference_Cost__c</summarizedField>
    <summaryForeignKey>Conference_Participant__c.Conference__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>