force-app/main/default/objects/Conference__c/fields/Conference_Leader__c.field-meta.xml
<CustomField>
    <fullName>Conference_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conferences</relationshipLabel>
    <relationshipName>Conferences</relationshipName>
    <type>Lookup</type>
</CustomField>