force-app/main/default/objects/Conference__c/fields/Detailed_Information_Link__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Information_Link__c</fullName>
    <label>Detailed Information Link</label>
    <type>Url</type>
</CustomField>