force-app/main/default/objects/Conference__c/fields/External_Presentation_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Presentation_Link__c</fullName>
    <label>External Presentation Link</label>
    <type>Url</type>
</CustomField>