force-app/main/default/objects/Conference__c/fields/Summary_Cost__c.field-meta.xml
<CustomField>
    <fullName>Summary_Cost__c</fullName>
    <formula>Accommodation_Cost__c + Transport_Cost__c + Conference_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>