force-app/main/default/objects/Conference__c/fields/Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>Transport_Cost__c</fullName>
    <label>Transport Cost</label>
    <summarizedField>Conference_Participant__c.Transport_Cost__c</summarizedField>
    <summaryForeignKey>Conference_Participant__c.Conference__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>