force-app/main/default/objects/Conference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Conference_Leader__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Conference_Cost__c</columns>
    <columns>Accommodation_Cost__c</columns>
    <columns>Transport_Cost__c</columns>
    <columns>Summary_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>